--- a/src/main/scala/settings.conf
+++ b/src/main/scala/settings.conf
@@ -12,3 +12,25 @@ vm {
   pesNumber : 1
   vmm : "Xen"
 }
+
+cloudlet {
+  length = 40000
+  fileSize = 300
+  outputSize = 400
+  cloudletId = 0
+}
+
+datacenter {
+  mips = 1000
+  ram = 8000
+  storage = 1000000
+  bw = 8000
+  arch = "x86"
+  os = "Linux"
+  vmm = "Xen"
+  time_zone = 10.0
+  cost = 3.0
+  costPerMem = 1.0
+  costPerStorage = 0.05
+  costPerBw = 0.10
+}
