--- a/src/main/scala/settings1.conf
+++ b/src/main/scala/settings1.conf
@@ -5,25 +5,27 @@ setting {
 
 vm {
   vmid : 1
-  mips : 1000
-  size : 10000
+  mips : 100
+  size : 100
   ram : 512
-  bw : 1000
+  bw : 100
   pesNumber : 1
   vmm : "Xen"
+  count : 40
 }
 
 cloudlet {
-  length = 40000
+  length = 4000
   fileSize = 300
   outputSize = 400
   cloudletId = 0
+  count = 40
 }
 
 datacenter {
   mips = 1000
   ram = 8000
-  storage = 1000000
+  storage = 100000
   bw = 8000
   arch = "x86"
   os = "Linux"
@@ -33,4 +35,5 @@ datacenter {
   costPerMem = 1.0
   costPerStorage = 0.05
   costPerBw = 0.10
+
 }
